# CageConversion

./: CMakeLists.txt  README.md
cmake/: libigl.cmake
results/beast/: cps-deformed.txt  cps-origin.txt
results/bench/: cps-deformed.txt  cps-origin.txt
results/elephant/: cps-deformed.txt  cps-origin.txt
results/giraffe/: cps-deformed.txt  cps-origin.txt
results/monkeyhead/: cps-deformed.txt  cps-origin.txt
results/octopus/: cps-deformed.txt  cps-origin.txt
results/seahorse/: cps-deformed.txt  cps-origin.txt
results/shark/: cps-deformed.txt  cps-origin.txt
src/: main.cpp
